Bug 118500 - FILESAVE Impress losing slide transition settings on saving
Summary: FILESAVE Impress losing slide transition settings on saving
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
: 115407 (view as bug list)
Depends on:
Blocks: Slide-Transitions
  Show dependency treegraph
 
Reported: 2018-07-02 08:35 UTC by philipp
Modified: 2018-09-18 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file which is losing settings (59.78 KB, application/vnd.oasis.opendocument.presentation)
2018-08-01 07:16 UTC, philipp
Details
Sound file which was used in previous ODP-example file. (1.89 MB, audio/mpeg)
2018-08-01 07:18 UTC, philipp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description philipp 2018-07-02 08:35:26 UTC
Description:
Sound in slide transition running over several slides is lost after saving the presentation as ODP. File name still written, but actual functionality lost. 

Steps to Reproduce:
1. Create presentation with more than one slide. 
2. Define slide transition, sound, choose "other sound" from file (MP3 here). 
3. Check the "repeat until next sound" (to make the music playing over several slides). 
4. On a later slide, choose in transitions, sound: "end previous sound here".

(Checking so far: when starting the presentation, the sound is starting and ending as expected)

5. Save the document (ODP), close Impress, open the document again.

Actual Results:
After reopening the file, the checkbox "repeat until next sound" which was set before is lost. The sound file name is still written in the sound box, but the music does not start in presentation mode. 

Choosing the same file again or setting the "repeat until..." box does recover the expected behaviour to play the file in presentation mode, but is not persistent after file saving. 

Expected Results:
All checkboxes and settings are saved. 


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.0.5.2 (x64)
Build-ID: 54c8cbb85f300ac59db32fe8a675ff7683cd5a16
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 1 Buovjaga 2018-07-15 15:24:55 UTC
Please attach an example file so the only thing we need to do is check the checkbox.

Please attach an example document.
Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the document.
Comment 2 philipp 2018-08-01 07:16:48 UTC
Created attachment 143873 [details]
Example file which is losing settings

Since the soundfile is only linked, second file (sound) is following.
Comment 3 philipp 2018-08-01 07:18:36 UTC
Created attachment 143874 [details]
Sound file which was used in previous ODP-example file.

Small sound file for testing in previous ODP file.
Comment 4 Buovjaga 2018-08-09 18:13:26 UTC
Bibisected with Win 5.3 to https://cgit.freedesktop.org/libreoffice/core/commit/?id=b223028d65d24ffcd8e27974c29c2744a5df6227
This condition has been checked before

Adding Cc: to Samuel Mehrbrodt

Also reproduced on Linux. Latest master on Win & Linux.
Comment 5 Commit Notification 2018-09-12 15:07:00 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61bc0d058dd95961761056a104ecd729ddfa4a82

tdf#118500 Impress losing slide transition sound on saving

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Samuel Mehrbrodt 2018-09-12 15:19:21 UTC
Fixed now, thanks for bibisecting!
Comment 7 Cor Nouws 2018-09-13 10:10:33 UTC
*** Bug 115407 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2018-09-13 14:49:07 UTC
Verified

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: c5846c5af1fff1543a160743dd2728c76f901e8b
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 13th 2018
Comment 9 Robert Simpson 2018-09-13 19:59:27 UTC
This has still not solved 115407. When the file is closed and reopened, the transition sound box now still holds the required sound, it does not actually play. If the sound is picked again from the drop-down sounds list, then it will play again. If 'stop previous sound' is selected from the drop-down list then on closing and reopening, it has reverted to 'no sound'.
Comment 10 Robert Simpson 2018-09-13 20:01:01 UTC
I should have noted: Ubuntu 18.04 and LO 6-1~2018-09-13_07.01.08.
Comment 11 Buovjaga 2018-09-13 21:07:12 UTC
(In reply to Robert Simpson from comment #10)
> LO 6-1

There's your problem. The commit is only in 6.2, so test against it, not 6.1.
Comment 12 Xisco Faulí 2018-09-14 09:05:37 UTC
(In reply to Robert Simpson from comment #10)
> I should have noted: Ubuntu 18.04 and LO 6-1~2018-09-13_07.01.08.

Please try with a master build from http://dev-builds.libreoffice.org/daily/master/
Thanks!
Comment 13 Commit Notification 2018-09-14 11:23:04 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e861df82eab3da34b3ba9c2c7a1d558f3d80059&h=libreoffice-6-1

tdf#118500 Impress losing slide transition sound on saving

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 philipp 2018-09-18 07:03:44 UTC
Many thanks. Just checked in the dev build of LO 6.1.2 from 2018-09-18. Working as expected now :)
Comment 15 Robert Simpson 2018-09-18 19:02:46 UTC
Working fine on Version: 6.2.0.0.alpha0+.
Thank you.
Robert