tdf#118500 Impress losing slide transition sound on saving

This reverts commit b223028d65d24ffcd8e27974c29c2744a5df6227.

Change-Id: Iac12092a4f6b0edb3b6a5228ed17e7d0c1794357
Reviewed-on: https://gerrit.libreoffice.org/60391
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>